--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -134,26 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "HuggingFaceEmbeddings(client=SentenceTransformer(\n",
-       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
-       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False})\n",
-       "  (2): Normalize()\n",
-       "), model_name='all-MiniLM-L6-V2', cache_folder=None, model_kwargs={}, encode_kwargs={}, multi_process=False)"
+       "384"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "embedding"
+    "dim=embedding.client.get_sentence_embedding_dimension()\n",
+    "dim"
    ]
   },
   {
@@ -165,9 +162,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.vectorstores import Pinecone\n",
+    "from pinecone import Pinecone as pc ,PodSpec\n",
+    "\n",
+    "key='f7187647-5beb-44c7-b5a6-29e725128334'\n",
+    "os.environ['PINECONE_API_KEY']=key\n",
+    "index_name='web-chat'\n",
+    "\n",
+    "# create new index and delete previous\n",
+    "pc_config = pc(api_key=key)\n",
+    "\n",
+    "for name in pc_config.list_indexes().names():\n",
+    "  try:\n",
+    "    pc_config.delete_index(name)\n",
+    "  except Exception as e:\n",
+    "    print('no index is there')\n",
+    "\n",
+    "pc_config.create_index(\n",
+    "        index_name,\n",
+    "        dimension=dim,  \n",
+    "        metric='dotproduct',\n",
+    "        spec=PodSpec(environment='gcp-starter')\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "# uploading the documents embedding\n",
+    "index=Pinecone.from_documents(data,embedding,index_name=index_name)\n",
+    "\n",
+    "# index.similarity_search('tcs',5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\study\\langchain_tutorial\\lang_env\\Lib\\site-packages\\langchain_community\\vectorstores\\pinecone.py:75: UserWarning: Passing in `embedding` as a Callable is deprecated. Please pass in an Embeddings object instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -178,18 +219,47 @@
        " Document(page_content='5 Replies to “TCS Hiring for UiPath Lead”\\t\\t\\n\\n\\n\\n\\n\\n Gaurav Ghayal says: \\n\\nSeptember 13, 2020 at 7:17 am', metadata={'loc': 'https://jobs.excelcult.com/tcs-hiring-for-uipath-lead/', 'source': 'https://jobs.excelcult.com/tcs-hiring-for-uipath-lead/'})]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#retreival code \n",
     "from langchain.vectorstores import Pinecone\n",
-    "key='f7187647-5beb-44c7-b5a6-29e725128334'\n",
-    "os.environ['PINECONE_API_KEY']=key\n",
-    "index_name='web-chat'\n",
-    "index=Pinecone.from_documents(data,embedding,index_name=index_name)\n",
-    "index.similarity_search('tcs',5)"
+    "from pinecone import Pinecone as pc\n",
+    "\n",
+    "pc_config = pc(api_key=key)\n",
+    "index=pc_config.Index(name=index_name)\n",
+    "vc=Pinecone(index,embedding.embed_query,text_key='text')\n",
+    "vc.similarity_search('tcs',5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(page_content='TCS Hiring RPA Blueprism Developers – ExcelCult\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n                                            ExcelCult                                            Learn || Apply || Share\\n\\n\\n\\n\\nBecome RPA Developer\\nBecome RPA Business Analyst\\nPractice RPA\\nRPA Interview Preparation\\n \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nTCS Hiring RPA Blueprism Developers\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nHome Blueprism TCS Hiring RPA Blueprism Developers', metadata={'loc': 'https://jobs.excelcult.com/tcs-hiring-rpa-blueprism-developers/', 'source': 'https://jobs.excelcult.com/tcs-hiring-rpa-blueprism-developers/'}),\n",
+       " Document(page_content='TCS Hiring for RPA Blueprism Developers – ExcelCult\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n                                            ExcelCult                                            Learn || Apply || Share\\n\\n\\n\\n\\nBecome RPA Developer\\nBecome RPA Business Analyst\\nPractice RPA\\nRPA Interview Preparation\\n \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nTCS Hiring for RPA Blueprism Developers\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nHome Blueprism TCS Hiring for RPA Blueprism Developers', metadata={'loc': 'https://jobs.excelcult.com/tcs-hiring-for-rpa-blueprism-developers/', 'source': 'https://jobs.excelcult.com/tcs-hiring-for-rpa-blueprism-developers/'}),\n",
+       " Document(page_content='TCS Hiring for UiPath Developers – ExcelCult\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n                                            ExcelCult                                            Learn || Apply || Share\\n\\n\\n\\n\\nBecome RPA Developer\\nBecome RPA Business Analyst\\nPractice RPA\\nRPA Interview Preparation\\n \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nTCS Hiring for UiPath Developers\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nHome RPA Jobs TCS Hiring for UiPath Developers', metadata={'loc': 'https://jobs.excelcult.com/tcs-hiring-for-uipath-developers/', 'source': 'https://jobs.excelcult.com/tcs-hiring-for-uipath-developers/'}),\n",
+       " Document(page_content='TCS Hiring for UiPath Lead – ExcelCult\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n                                            ExcelCult                                            Learn || Apply || Share\\n\\n\\n\\n\\nBecome RPA Developer\\nBecome RPA Business Analyst\\nPractice RPA\\nRPA Interview Preparation\\n \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nTCS Hiring for UiPath Lead\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nHome RPA Jobs TCS Hiring for UiPath Lead', metadata={'loc': 'https://jobs.excelcult.com/tcs-hiring-for-uipath-lead/', 'source': 'https://jobs.excelcult.com/tcs-hiring-for-uipath-lead/'}),\n",
+       " Document(page_content='5 Replies to “TCS Hiring for UiPath Lead”\\t\\t\\n\\n\\n\\n\\n\\n Gaurav Ghayal says: \\n\\nSeptember 13, 2020 at 7:17 am', metadata={'loc': 'https://jobs.excelcult.com/tcs-hiring-for-uipath-lead/', 'source': 'https://jobs.excelcult.com/tcs-hiring-for-uipath-lead/'}),\n",
+       " Document(page_content='TCS hiring for RPA Automation Anywhere Developers – ExcelCult\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n                                            ExcelCult                                            Learn || Apply || Share\\n\\n\\n\\n\\nBecome RPA Developer\\nBecome RPA Business Analyst\\nPractice RPA\\nRPA Interview Preparation\\n \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nTCS hiring for RPA Automation Anywhere Developers\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nHome Automation Anywhere TCS hiring for RPA Automation Anywhere Developers\\n\\n\\n\\n February 3, 2021  Mohammed Gouse Pasha \\nLocation:\\nHyderabad\\nJD:\\nExperience – 4 to 12 YearsSould have AA Masters certification for version 11x.VBA Macros and vbscriptGood communication\\nApply At:\\nmageswari.r@tcs.com\\n\\n \\n\\n\\nLeave a Reply Cancel replyYour email address will not be published. Required fields are marked *\\nComment\\n\\n\\nName*\\n\\n\\n\\nEmail*\\n\\n\\n\\nWebsite\\n\\n\\n Save my name, email, and website in this browser for the next time I comment.\\n \\n\\n \\n\\n\\n\\n\\n\\n\\nRecent Posts', metadata={'loc': 'https://jobs.excelcult.com/tcs-hiring-for-rpa-automation-anywhere-developers-2/', 'source': 'https://jobs.excelcult.com/tcs-hiring-for-rpa-automation-anywhere-developers-2/'})]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#retreival 2\n",
+    "index_2=Pinecone.from_existing_index(index_name,embedding)\n",
+    "index_2.similarity_search('tcs',6)"
    ]
   },
   {
@@ -264,13 +334,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\study\\langchain_tutorial\\lang_env\\Lib\\site-packages\\langchain_community\\vectorstores\\pinecone.py:75: UserWarning: Passing in `embedding` as a Callable is deprecated. Please pass in an Embeddings object instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://jobs.excelcult.com/wipro-hiring-for-rpa-blueprism-developers/\n",
+      "Apply At:\n",
+      "page_content='Apply At:\\nsunetra.gumaste@wipro.com' metadata={'loc': 'https://jobs.excelcult.com/wipro-hiring-for-rpa-blueprism-developers/', 'source': 'https://jobs.excelcult.com/wipro-hiring-for-rpa-blueprism-developers/'}\n",
+      "https://jobs.excelcult.com/wipro-hiring-rpa-uipath-senior-developer-lead/\n",
+      "2 Replies to “Wipro hiring RPA UiPath Senior Developer & Lead”\t\t\n",
+      "page_content='2 Replies to “Wipro hiring RPA UiPath Senior Developer & Lead”\\t\\t\\n\\n\\n\\n\\n\\n Govardhan Reddy says: \\n\\nJanuary 10, 2021 at 5:11 am' metadata={'loc': 'https://jobs.excelcult.com/wipro-hiring-rpa-uipath-senior-developer-lead/', 'source': 'https://jobs.excelcult.com/wipro-hiring-rpa-uipath-senior-developer-lead/'}\n",
+      "https://jobs.excelcult.com/wipro-hiring-for-rpa-uipath-technical-architect/\n",
+      "Apply At:\n",
+      "page_content='Apply At:\\nmoumita.pandey@wipro.com' metadata={'loc': 'https://jobs.excelcult.com/wipro-hiring-for-rpa-uipath-technical-architect/', 'source': 'https://jobs.excelcult.com/wipro-hiring-for-rpa-uipath-technical-architect/'}\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "#retreival code \n",
+    "from langchain.vectorstores import Pinecone\n",
+    "from pinecone import Pinecone as pc\n",
+    "\n",
     "query='wipro'\n",
     "k=3\n",
-    "docs=get_similar_docs(index,query,k)"
+    "pc_config = pc(api_key=key)\n",
+    "index=pc_config.Index(name=index_name)\n",
+    "vc=Pinecone(index,embedding.embed_query,text_key='text')\n",
+    "docs=get_similar_docs(vc,query,k)\n",
+    "\n",
+    "\n",
+    "for i in docs:\n",
+    "  print(i.metadata['loc'])\n",
+    "  print(i.page_content.split('\\n')[0])\n",
+    "  print(i)"
    ]
   },
   {
@@ -291,11 +399,7 @@
      ]
     }
    ],
-   "source": [
-    "for i in docs:\n",
-    "  print(i.metadata['loc'])\n",
-    "  print(i.page_content.split('\\n')[0])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
