updated the app with embed store

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -109,25 +109,15 @@
    "source": [
     "from langchain.embeddings.sentence_transformer import SentenceTransformerEmbeddings\n",
     "\n",
-    "os.environ['HUGGINGFACEHUB_API_KEY']='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'"
+    "os.environ['HUGGINGFACEHUB_API_KEY']='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'\n",
+    "key='f7187647-5beb-44c7-b5a6-29e725128334'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\study\\langchain_tutorial\\lang_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "d:\\study\\langchain_tutorial\\lang_env\\Lib\\site-packages\\torch\\_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  return self.fget.__get__(instance, owner)()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "embedding=SentenceTransformerEmbeddings(model_name='all-MiniLM-L6-V2')"
    ]
