--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -109,8 +109,7 @@
    "source": [
     "from langchain.embeddings.sentence_transformer import SentenceTransformerEmbeddings\n",
     "\n",
-    "os.environ['HUGGINGFACEHUB_API_KEY']='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'\n",
-    "key='f7187647-5beb-44c7-b5a6-29e725128334'"
+    "os.environ['HUGGINGFACEHUB_API_KEY']='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'"
    ]
   },
   {
