--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -109,7 +109,7 @@
    "source": [
     "from langchain.embeddings.sentence_transformer import SentenceTransformerEmbeddings\n",
     "\n",
-    "os.environ['HUGGINGFACEHUB_API_KEY']='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'"
+    "os.environ['HUGGINGFACEHUB_API_KEY']=''"
    ]
   },
   {
@@ -158,7 +158,7 @@
     "from langchain.vectorstores import Pinecone\n",
     "from pinecone import Pinecone as pc ,PodSpec\n",
     "\n",
-    "key='f7187647-5beb-44c7-b5a6-29e725128334'\n",
+    "key=''\n",
     "os.environ['PINECONE_API_KEY']=key\n",
     "index_name='web-chat'\n",
     "\n",
